--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ development:
   encoding: unicode
   database: contacttracker_development
   pool: 5
-  username: contacttracker
+  username: sowjanya
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -48,7 +48,7 @@ test:
   encoding: unicode
   database: contacttracker_test
   pool: 5
-  username: contacttracker
+  username: sowjanya
   password:
 
 production:
@@ -56,5 +56,5 @@ production:
   encoding: unicode
   database: contacttracker_production
   pool: 5
-  username: contacttracker
+  username: sowjanya
   password:
